--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -1,40 +1,11 @@
-.footer__inner {
-  @include inner;
-}
-
-footer {
+.footer {
   background-color: #f1f1f1;
 }
 
-.social__list {
-  @include reset-list;
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
-  padding-top: 25px;
-}
+.footer__inner {
+  @include inner;
 
-.footer__copyright {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  padding-bottom: 22px;
-}
-
-.footer__line {
-  margin: 26px 0;
-}
-
-.footer__logo {
-  display: none;
-}
-
-@media (min-width: $tablet-width) {
-  .footer__line {
-    display: none;
-  }
-
-  .footer__inner {
+  @media (min-width: $tablet-width) {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -42,35 +13,57 @@ footer {
     padding-top: 50px;
     padding-bottom: 50px;
   }
+}
 
-  .footer__logo {
-    display: block;
-  }
+.social__list {
+  @include reset-list;
 
-  .footer__copyright {
-    align-self: center;
-    padding: 0;
-    font-size: 19px;
-  }
-
-  .social__list {
+  @media (min-width: $tablet-width) {
     justify-content: unset;
     margin-right: -58px;
     padding: 0;
   }
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  padding-top: 25px;
+}
 
-  .social__item:not(:last-of-type) {
-    margin-right: 40px;
-  }
-
-  .copyright__text {
+.footer__copyright {
+  @media (min-width: $tablet-width) {
     align-self: center;
-    margin-right: 30px;
+    padding: 0;
+    font-size: 19px;
+  }
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  padding-bottom: 22px;
+}
+
+.footer__line {
+  @media (min-width: $tablet-width) {
+    display: none;
+  }
+  margin: 26px 0;
+}
+
+.footer__logo {
+  @media (min-width: $tablet-width) {
+    display: block;
+  }
+  display: none;
+}
+
+.social__item:not(:last-of-type) {
+  @media (min-width: $tablet-width) {
+    margin-right: 40px;
   }
 }
 
-@media (min-width: $desktop-width) {
-  .footer__logo {
-    display: block;
+.copyright__text {
+  @media (min-width: $tablet-width) {
+    align-self: center;
+    margin-right: 30px;
   }
 }
