--- a/source/sass/base/variables.scss
+++ b/source/sass/base/variables.scss
@@ -1,5 +1,5 @@
 $color-danger: #444444;
 $color-brand: #63d1bb;
-$mobile-width-only: 767px;
 $tablet-width: 768px;
+$mobile-width-only: $tablet-width - 1;
 $desktop-width: 1150px;
