--- a/source/sass/blocks/handwork.scss
+++ b/source/sass/blocks/handwork.scss
@@ -53,7 +53,7 @@
     padding: 161px 268px 354px 268px;
   }
   padding: 85px 52px 130px 52px;
-  margin: 0;
+  margin: 0 auto;
 }
 
 .handwork__category {
