--- a/source/sass/base/mixins.scss
+++ b/source/sass/base/mixins.scss
@@ -3,12 +3,12 @@
   padding: 0 30px;
 
   @media (min-width: $tablet-width) {
-    width: 668px;
+    width: 100%;
     padding: 0 50px;
   }
 
   @media (min-width: $desktop-width) {
-    width: 1050px;
+    width: 1150px;
   }
 }
 
