--- a/source/sass/blocks/handwork.scss
+++ b/source/sass/blocks/handwork.scss
@@ -1,17 +1,17 @@
 .handwork {
   @media (min-width: $tablet-width) {
-    background: url("../img/hero-tablet@1x.jpg") no-repeat center top;
+    background: url("../img/hero-tablet@1x.jpg") no-repeat center top rgb(249, 249, 249);
     box-shadow: inset 0 -1px 0 1px #f9f9f9, inset 0 0 0 1px rgba(68, 68, 68, 0.2);
     margin-top: -50px;
   }
 
   @media (min-width: $desktop-width) {
-    background-color: rgb(249, 249, 249);
+    background: url("../img/hero-desktop@1x.jpg") no-repeat center top rgb(249, 249, 249);
     margin-top: -50px;
     margin-bottom: 140px;
   }
   margin-bottom: 34px;
-  background: url("../img/hero-mobile@1x.jpg") no-repeat center top;
+  background: url("../img/hero-mobile@1x.jpg") no-repeat center top rgb(249, 249, 249);
 }
 
 .handwork__inner {
@@ -46,7 +46,6 @@
   }
 
   @media (min-width: $desktop-width) {
-    width: 615px;
     font-size: 53px;
     font-weight: bold;
     line-height: 1.08;
