--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -61,16 +61,9 @@
 }
 
 .form__legend {
-  &::after {
-    content: "";
-    position: absolute;
-    top: 5px;
-    left: 60px;
-    width: 195px;
-    height: 1px;
-    background-color: $color-brand;
-  }
-  position: relative;
+  display: inline-flex;
+  align-items: center;
+  width: 100%;
   font-size: 17px;
   font-weight: bold;
   line-height: 0.94;
@@ -79,18 +72,15 @@
   margin-bottom: 30px;
 }
 
-.form__legend-email {
+.form__legend-line {
   &::after {
-    top: 5px;
-    left: 80px;
-    width: 175px;
+    content: "";
+    display: block;
+    width: 100%;
+    height: 1px;
+    margin-left: 15px;
+    background-color: $color-brand;
   }
-}
-
-.form__legend-type,
-.form__legend-color {
-  display: flex;
-  flex-direction: row;
 }
 
 .form__style-text {
@@ -136,11 +126,6 @@
 
 .form__text-mb:not(:last-of-type) {
   margin-bottom: 20px;
-}
-
-.form__legend-phone,
-.form__legend-email {
-  margin: 0;
 }
 
 .form__require {
