--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -153,6 +153,14 @@
   border-top: 1px solid #e1e1e1;
 }
 
+.catalog__item-video {
+  @media (min-width: $tablet-width) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
 .catalog__money {
   text-decoration: none;
   color: #000000;
@@ -164,6 +172,10 @@
 }
 
 .catalog__process {
+  @media (min-width: $tablet-width) {
+    width: auto;
+    margin: 0 auto 40px 40px;
+  }
   display: flex;
   align-items: center;
   width: 205px;
@@ -179,10 +191,20 @@
 }
 
 .catalog__video {
+  @media (min-width: $tablet-width) {
+    order: -1;
+    width: 668px;
+    height: 455px;
+  }
   margin-bottom: 34px;
 }
 
 .catalog__text-process {
+  @media (min-width: $tablet-width) {
+    margin: 0 40px 40px 40px;
+    width: auto;
+    font-size: 15px;
+  }
   width: 185px;
   line-height: 1.85;
   text-align: left;
@@ -191,7 +213,10 @@
 
 .catalog__btn {
   @include button-style;
-  width: 195px;
-  padding: 14px 0;
+
+  @media (min-width: $tablet-width) {
+    min-width: 585px;
+  }
+  padding: 14px 26px;
   margin-bottom: 32px;
 }
