--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -4,6 +4,65 @@
 
 .form__inner {
   @include inner;
+
+  @media (max-width: $mobile-width-only) {
+    margin: 0;
+  }
+
+  @media (min-width: $tablet-width) {
+    display: flex;
+  }
+}
+
+.form__inner-column {
+  @media (min-width: $tablet-width) {
+    flex-direction: column;
+  }
+}
+
+.form__wrapper-phone,
+.form__wrapper-email {
+  @media (min-width: $tablet-width) {
+    display: flex;
+  }
+}
+
+.form__name {
+  @media (min-width: $tablet-width) {
+    width: 500px;
+    margin-left: auto;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 700px;
+    margin: 0 auto;
+  }
+}
+
+.form__first-name,
+.form__last-name {
+  @media (min-width: $tablet-width) {
+    margin-bottom: 24px;
+  }
+}
+
+.form__first-name,
+.form__last-name,
+.form__father-name {
+  @media (min-width: $tablet-width) {
+    display: flex;
+  }
+}
+
+.form__placeholder-tel,
+.form__placeholder-email {
+  @media (min-width: $tablet-width) {
+    background-color: #f1f1f1;
+  }
+}
+
+.form__wrapper-phone {
+  margin-bottom: 30px;
 }
 
 .form__title-page {
@@ -34,6 +93,11 @@
     font-size: 17px;
     line-height: 1.76;
   }
+
+  @media (min-width: $desktop-width) {
+    width: 672px;
+    margin: 100px auto 20px auto;
+  }
   font-size: 13px;
   color: $color-danger;
   line-height: 1.85;
@@ -41,6 +105,15 @@
 }
 
 .form__radio {
+  @media (min-width: $tablet-width) {
+    width: 500px;
+    margin-left: auto;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 700px;
+    margin: 0 auto;
+  }
   display: flex;
   flex-direction: column;
 }
@@ -55,6 +128,19 @@
 }
 
 .form__checkbox {
+  @media (min-width: $tablet-width) {
+    justify-content: space-between;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 500px;
+    margin-left: auto;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 700px;
+    margin: 0 auto;
+    padding-right: 140px;
+  }
   display: flex;
   flex-direction: column;
 }
@@ -64,10 +150,7 @@
     flex-direction: row;
     justify-content: unset;
     align-items: baseline;
-  }
-
-  &:not(:last-of-type) {
-    margin-bottom: 30px;
+    padding: 50px 0;
   }
   display: flex;
   flex-direction: column;
@@ -78,6 +161,8 @@
 .form__legend {
   @media (min-width: $tablet-width) {
     width: auto;
+    align-self: baseline;
+    min-width: 60px;
   }
   display: inline-flex;
   align-items: center;
@@ -87,21 +172,26 @@
   line-height: 0.94;
   text-transform: uppercase;
   color: $color-brand;
-  margin: 0 0 30px 0;
 }
 
 .form__legend-line {
-  &::after {
-    content: "";
-    display: block;
-    width: 100%;
-    height: 1px;
-    margin-left: 15px;
-    background-color: $color-brand;
+  @media (max-width: $mobile-width-only) {
+    &::after {
+      content: "";
+      display: block;
+      width: 100%;
+      height: 1px;
+      margin-left: 15px;
+      background-color: $color-brand;
+    }
   }
 }
 
 .form__style-text {
+  @media (min-width: $desktop-width) {
+    font-size: 19px;
+    line-height: 0.95;
+  }
   font-size: 17px;
   font-weight: bold;
   line-height: 1.06;
@@ -115,6 +205,16 @@
 }
 
 .form__placeholder {
+  @media (min-width: $tablet-width) {
+    width: 500px;
+    margin-left: auto;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 700px;
+    margin: 0 auto;
+  }
+
   &::placeholder {
     opacity: 0.3;
     font-size: 17px;
@@ -124,11 +224,33 @@
   width: 100%;
   border: none;
   box-shadow: inset 0 -2px 0 0 #000000;
-  padding: 18px 0;
+  padding: 18px 0 18px 18px;
+}
+
+.form__placeholder-tel {
+  @media (min-width: $tablet-width) {
+    margin-bottom: 24px;
+  }
 }
 
 .form__placeholder-mb {
+  @media (min-width: $tablet-width) {
+    margin-bottom: 0;
+  }
   margin-bottom: 25px;
+}
+
+.form__textarea {
+  @media (min-width: $tablet-width) {
+    width: 500px;
+    min-height: 142px;
+    margin-left: auto;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 700px;
+    margin: 0 auto;
+  }
 }
 
 .form__textarea-text {
@@ -139,15 +261,21 @@
     color: $color-danger;
     padding: 15px 55px 0 16px;
   }
-  width: 250px;
+  width: 100%;
   height: 140px;
   resize: none;
   border: solid 2px $color-danger;
-  margin-bottom: 18px;
 }
 
-.form__text-mb:not(:last-of-type) {
-  margin-bottom: 20px;
+.form__text-mb {
+  @media (min-width: $tablet-width) {
+    align-self: center;
+    margin-right: 15px;
+  }
+
+  &:not(:last-of-type) {
+    margin-bottom: 20px;
+  }
 }
 
 .form__require {
@@ -155,7 +283,32 @@
   line-height: 1.14;
 }
 
+.form__inner-required {
+  @media (min-width: $tablet-width) {
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 758px;
+    padding: 0 0 0 60px;
+    margin: 0 auto;
+  }
+}
+
 .form__btn {
   @include button-style;
+
+  @media (min-width: $tablet-width) {
+    margin-top: 0;
+  }
   margin-top: 30px;
+  padding: 20px 45px;
+}
+
+.form__fieldset-background {
+  @media (min-width: $tablet-width) {
+    background-color: #f1f1f1;
+  }
 }
