--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -1,39 +1,59 @@
-.modal {
-  display: none;
+.modal__content {
+  @media (min-width: $tablet-width) {
+    width: 566px;
+  }
+  display: block;
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  text-align: center;
   width: 318px;
   margin: auto;
   background-color: #ffffff;
   box-shadow: 0 5px 10px 0 rgba(0, 1, 1, 0.25);
   border: solid 1px #c6c6c6;
+  z-index: 11;
 }
 
 .modal__inner {
   @include inner;
+
+  @media (min-width: $desktop-width) {
+    width: auto;
+  }
 }
 
 .modal__title {
+  @media (min-width: $tablet-width) {
+    width: auto;
+  }
   width: 160px;
   font-size: 25px;
   font-weight: bold;
   line-height: 1.2;
-  text-align: center;
   text-transform: uppercase;
   padding: 36px 0 25px 0;
   margin: 0 auto;
 }
 
 .modal__legend {
+  @media (min-width: $tablet-width) {
+    font-size: 17px;
+    line-height: 1.76;
+  }
   text-align: center;
   font-size: 15px;
   line-height: 2;
   color: $color-danger;
+  margin-bottom: 25px;
 }
 
 .modal__sizes {
+  @media (min-width: $tablet-width) {
+    width: 365px;
+    margin: 0 auto 30px auto;
+  }
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -45,6 +65,9 @@
 }
 
 .modal__size {
+  @media (min-width: $tablet-width) {
+    padding: 20px 52px;
+  }
   font-size: 17px;
   font-weight: bold;
   line-height: 0.94;
@@ -56,13 +79,36 @@
 
 .modal__btn {
   @include button-style;
+
+  @media (min-width: $tablet-width) {
+    padding: 20px 134px;
+  }
   color: #ffffff;
   background-color: #63d1bb;
   border: none;
   margin-bottom: 46px;
+  padding: 20px 78px;
 }
 
 .modal__fieldset {
   border: none;
   padding: 0;
+}
+
+.modal__overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.8);
+}
+
+.modal {
+  display: none;
+}
+
+.modal-add {
+  display: block;
 }
