--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -104,7 +104,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    margin-bottom: 0;
+    margin: 0;
   }
   text-decoration: none;
   font-size: 17px;
@@ -156,8 +156,15 @@
 .catalog__item-video {
   @media (min-width: $tablet-width) {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
     align-items: center;
+  }
+
+  @media (min-width: $desktop-width) {
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    align-items: unset;
   }
 }
 
@@ -175,6 +182,12 @@
   @media (min-width: $tablet-width) {
     width: auto;
     margin: 0 auto 40px 40px;
+  }
+
+  @media (min-width: $desktop-width) {
+    order: -1;
+    margin: 0;
+    align-self: flex-start;
   }
   display: flex;
   align-items: center;
@@ -196,6 +209,10 @@
     width: 668px;
     height: 455px;
   }
+
+  @media (min-width: $desktop-width) {
+    margin: 0;
+  }
   margin-bottom: 34px;
 }
 
@@ -204,6 +221,10 @@
     margin: 0 40px 40px 40px;
     width: auto;
     font-size: 15px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin: 0;
   }
   width: 185px;
   line-height: 1.85;
@@ -216,7 +237,22 @@
 
   @media (min-width: $tablet-width) {
     min-width: 585px;
+    padding: 20px 220px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 20px 46px;
+    margin: 0;
+    min-width: 230px;
   }
   padding: 14px 26px;
   margin-bottom: 32px;
+}
+
+.catalog__process-wrapper {
+  @media (min-width: $desktop-width) {
+    order: -1;
+    width: 240px;
+    text-align: left;
+  }
 }
