fix contacts block in index.html and video block in catalog.html

--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -171,8 +171,8 @@
   }
 
   @media (min-width: $desktop-width) {
-    flex-direction: row-reverse;
-    justify-content: space-between;
+    display: block;
+    min-height: 455px;
   }
 }
 
@@ -198,9 +198,11 @@
   }
 
   @media (min-width: $desktop-width) {
-    order: -1;
-    margin: 0;
-    align-self: flex-start;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 160px;
+    float: right;
+    margin: 50px 140px 30px 0;
   }
 }
 
@@ -210,6 +212,10 @@
 
 .catalog__img {
   margin: 0 25px 0 0;
+
+  @media (min-width: $desktop-width) {
+    margin: 0 0 30px 0;
+  }
 }
 
 .catalog__video {
@@ -223,6 +229,7 @@
 
   @media (min-width: $desktop-width) {
     margin: 0;
+    float: left;
   }
 }
 
@@ -239,7 +246,11 @@
   }
 
   @media (min-width: $desktop-width) {
-    margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 224px;
+    margin: 0 0 40px 0;
   }
 }
 
@@ -263,8 +274,9 @@
 
 .catalog__process-wrapper {
   @media (min-width: $desktop-width) {
-    order: -1;
+    float: right;
     width: 240px;
     text-align: left;
+    margin: 0 58px 0 0;
   }
 }
