--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -13,9 +13,8 @@
 .contacts__wrapper {
   @media (min-width: $desktop-width) {
     position: relative;
-    display: flex;
-    flex-direction: column;
     width: 875px;
+    min-height: 500px;
     margin-left: auto;
     margin-bottom: 45px;
   }
@@ -46,10 +45,11 @@
       top: 5px;
       left: -121px;
     }
+    float: left;
+    margin-top: 60px;
+    margin-bottom: 60px;
     font-size: 53px;
     line-height: 1.08;
-    display: inline-block;
-    margin-bottom: 44px;
   }
 }
 
@@ -61,8 +61,10 @@
   align-items: flex-start;
 
   @media (min-width: $desktop-width) {
-    flex-direction: column;
-    margin-bottom: 26px;
+    display: block;
+    clear: both;
+    float: left;
+    margin-bottom: 94px;
   }
 }
 
@@ -106,6 +108,11 @@
   position: relative;
   text-align: center;
   margin-bottom: 38px;
+
+  @media (min-width: $desktop-width) {
+    float: right;
+    margin-top: -160px;
+  }
 }
 
 .contacts__pin {
@@ -127,7 +134,8 @@
   }
 
   @media (min-width: $desktop-width) {
-    margin-left: 0;
+    float: left;
+    margin: 0;
   }
 }
 
